--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,23 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.makingchange.MainActivity"
-    android:orientation="vertical">
+    tools:context="com.example.android.makingchange.MainActivity">
 
     <ImageView
         android:id="@+id/mainmenu_LogoImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_marginBottom="300dp"
         android:src="@drawable/logolowres" />
 
@@ -32,6 +32,7 @@
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="30dp"
         android:background="@color/colorPrimary"
+        android:onClick="MenuMove"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:text="Sign In"
@@ -46,6 +47,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginBottom="30dp"
         android:background="@color/colorPrimary"
+        android:onClick="MenuMove"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:text="Sign Up"
@@ -59,6 +61,7 @@
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="30dp"
         android:background="@color/colorPrimary"
+        android:onClick="MenuMove"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:text="Back"
@@ -73,6 +76,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginBottom="30dp"
         android:background="@color/colorPrimary"
+        android:onClick="MenuMove"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:text="OK"
@@ -83,8 +87,8 @@
         android:id="@+id/signin_txtusername"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="UserName"
         android:layout_marginTop="250dp"
+        android:text="UserName"
         android:textColor="@color/colorPrimaryLight"
         android:visibility="gone" />
 
@@ -93,8 +97,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signin_txtusername"
-        android:textColor="@color/colorPrimaryLight"
         android:inputType="text"
+        android:textColor="@color/colorPrimaryLight"
         android:visibility="gone" />
 
     <TextView
@@ -102,8 +106,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signin_username"
-        android:textColor="@color/colorPrimaryLight"
         android:text="Password"
+        android:textColor="@color/colorPrimaryLight"
         android:visibility="gone" />
 
     <EditText
@@ -111,8 +115,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signin_txtpassword"
-        android:textColor="@color/colorPrimaryLight"
         android:inputType="textPassword"
+        android:textColor="@color/colorPrimaryLight"
         android:visibility="gone" />
 
     <TextView
@@ -120,8 +124,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/signin_password"
-        android:text="UserName"
         android:layout_marginTop="20dp"
+        android:text="UserName"
         android:textColor="@color/colorPrimaryLight"
         android:visibility="gone" />
 
@@ -130,8 +134,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signup_txtusername"
-        android:textColor="@color/colorPrimaryLight"
         android:inputType="text"
+        android:textColor="@color/colorPrimaryLight"
         android:visibility="gone" />
 
     <TextView
@@ -139,8 +143,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signup_username"
-        android:textColor="@color/colorPrimaryLight"
         android:text="Password"
+        android:textColor="@color/colorPrimaryLight"
         android:visibility="gone" />
 
     <EditText
@@ -148,8 +152,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signup_txtpassword"
-        android:textColor="@color/colorPrimaryLight"
         android:inputType="textPassword"
+        android:textColor="@color/colorPrimaryLight"
         android:visibility="gone" />
 
     <TextView
@@ -157,8 +161,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signup_password"
-        android:textColor="@color/colorPrimaryLight"
         android:text="Password Confirm"
+        android:textColor="@color/colorPrimaryLight"
         android:visibility="gone" />
 
     <EditText
@@ -166,8 +170,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signup_txtpassword2"
-        android:textColor="@color/colorPrimaryLight"
         android:inputType="textPassword"
+        android:textColor="@color/colorPrimaryLight"
         android:visibility="gone" />
 
     <TextView
@@ -175,8 +179,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signup_password2"
-        android:textColor="@color/colorPrimaryLight"
         android:text="Email"
+        android:textColor="@color/colorPrimaryLight"
         android:visibility="gone" />
 
     <EditText
