--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,15 +25,12 @@
         android:src="@drawable/logolowres" />
 
 
-    <TextView
-        android:id="@+id/mainmenu_title"
+    <ImageView
+        android:id="@+id/mainmenu_TitleImageView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="270dp"
-        android:enabled="false"
-        android:text="Making Change"
-        android:textColor="@color/colorPrimaryLight"
-        android:textSize="40dp" />
+        android:layout_marginTop="400dp"
+        android:src="@drawable/makingchangetitle" />
 
 
     <Button
@@ -64,10 +61,5 @@
         android:paddingRight="16dp"
         android:text="Sign Up"
         android:textColor="@android:color/white" />
-
-
-
-
-
 </RelativeLayout>
 
