--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,8 @@
 
     <ImageView
         android:id="@+id/mainmenu_LogoImageView"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
@@ -61,5 +60,6 @@
         android:paddingRight="16dp"
         android:text="Sign Up"
         android:textColor="@android:color/white" />
+
 </RelativeLayout>
 
