--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/signupview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,16 +8,17 @@
     <ImageView
         android:id="@+id/mainmenu_LogoImageView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="5"
+        android:layout_height="300dp"
         android:src="@drawable/logolowres" />
 
     <TextView
         android:id="@+id/signup_txtusername"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/signin_password"
+        android:layout_below="@+id/mainmenu_LogoImageView"
         android:layout_marginTop="20dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:text="UserName"
         android:textColor="@color/colorPrimaryLight" />
 
@@ -27,6 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/signup_txtusername"
         android:inputType="text"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:textColor="@color/colorPrimaryLight" />
 
     <TextView
@@ -34,6 +37,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signup_username"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:text="Password"
         android:textColor="@color/colorPrimaryLight" />
 
@@ -43,6 +48,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/signup_txtpassword"
         android:inputType="textPassword"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:textColor="@color/colorPrimaryLight" />
 
     <TextView
@@ -50,6 +57,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signup_password"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:text="Password Confirm"
         android:textColor="@color/colorPrimaryLight" />
 
@@ -59,6 +68,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/signup_txtpassword2"
         android:inputType="textPassword"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:textColor="@color/colorPrimaryLight" />
 
     <TextView
@@ -66,6 +77,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signup_password2"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:text="Email"
         android:textColor="@color/colorPrimaryLight" />
 
@@ -74,6 +87,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signup_txtemail"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:textColor="@color/colorPrimaryLight" />
 
     <Button
@@ -104,4 +119,4 @@
         android:text="OK"
         android:textColor="@android:color/white" />
 
-</LinearLayout>
+</RelativeLayout>
