--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -4,7 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <ImageView
         android:id="@+id/mainmenu_LogoImageView"
@@ -57,22 +61,23 @@
         android:id="@+id/mainmenu_button_back"
         android:layout_width="160dp"
         android:layout_height="36dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="30dp"
+
         android:background="@color/colorPrimary"
         android:onClick="MenuMove"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:text="Back"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:layout_alignTop="@+id/mainmenu_button_ok"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:id="@+id/mainmenu_button_ok"
         android:layout_width="160dp"
         android:layout_height="36dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginBottom="30dp"
         android:background="@color/colorPrimary"
         android:onClick="MenuMove"
