--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.android.makingchange.MainActivity">
 
+    //below is the Logo Image
+
     <ImageView
         android:id="@+id/mainmenu_LogoImageView"
         android:layout_width="fill_parent"
